* replaced broken bsd-inherited implementation of strtod() with the glibc   version that lives in our repo, too, and actually works as intended * removed the broken strtod() implementation from the repo This fixes all floating-point test regressions reported in #3308.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31919 a95241bf-73f2-0310-859d-f6bbb57e9c96